# vibecoding

./: CLAUDE.md  INCOMPLETE.md  INSTRUCTIONS.md  README.md  run.py  vibecoder.py
conway/: .gitignore  Cargo.toml  INSTRUCTIONS.md  MANUAL.md  PATTERNS.md  README.md  analyze-patterns.sh  benchmark-config.toml  conway-tools.sh  learn-conway.sh  review.md  run.sh  show-patterns.sh  visualize-patterns.sh
conway/examples/: benchmark.rs
conway/src/: analyzer.rs  benchmark.rs  config.rs  game.rs  grid.rs  grid_test.rs  lib.rs  main.rs  patterns.rs  renderer.rs  tutorial.rs  visualizer.rs
