[package]
name = "conway"
version = "0.1.0"
edition = "2021"
description = "High-Performance Terminal Conway's Game of Life"
authors = ["Claude"]

[dependencies]
crossterm = "0.26.1"
rand = "0.8.5"
rayon = "1.7.0"
clap = { version = "4.3.19", features = ["derive"] }
image = "0.24.6"
gif = "0.12.0"
palette = "0.7.2"

[profile.release]
opt-level = 3             # Maximum optimization
lto = true                # Enable Link Time Optimization
codegen-units = 1         # Reduce parallel code generation units for better optimization
panic = "abort"           # Abort on panic (smaller binary)
strip = true              # Strip symbols from binary
